back to home button Update index.html
back to home button

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ body {
     <input type="tel" id="phone-number" placeholder="Parent's Phone Number" required />
     <input type="text" id="amount" placeholder="Amount (₦)" required />
     <button type="button" onclick="payWithPaystack()">Proceed to Pay</button>
+    <button type="button">Back to Home</button>
   </form>
   <p class="footer-note">Powered by Paystack | Secure Payment Gateway</p>
 </div>
